# grpc

./: .gitignore  PLAN.md  README.md  claude-session.txt
client/: Cargo.toml  README.md
client/integration/tests_failed/: bad_method.err  bad_method.sh  echo1.err  echo1.sh  echo2.err  echo2.sh  echo3.err  echo3.sh  echo4.err  echo4.sh  echo5.err  echo5.sh  echo6.err  echo6.sh  hello1.err  hello1.sh  hello2.err  hello2.sh  hello3.err  hello3.sh  invalid_json.err  invalid_json.sh  invalid_url.err  invalid_url.sh  out_of_range.err  out_of_range.sh  unknown_service.err  unknown_service.sh
client/integration/tests_ok/: default_value.out  default_value.sh  echo1.out  echo1.sh  echo2.out  echo2.sh  echo3.sh  echo4.out  echo4.sh  echo5.out  echo5.sh  field_null.out  field_null.sh  optional_string.out  optional_string.sh
client/src/: client.rs  descriptor.rs  encoder.rs  main.rs  parser.rs  pool.rs  protoset.rs  reader.rs  request.rs  request_body.rs  resolve.rs  symbols.rs
client/src/request/: body.rs  encoder.rs  field.rs  mod.rs  request.rs
client/src/schema/: descriptor.rs  mod.rs  pool.rs  symbols.rs
client/src/wire/: mod.rs  reader.rs  writer.rs
notes/: client.md
proto/: echo.proto  echo.protoset  error_details.protoset  helloworld.proto  operation.proto  operation.protoset  status.proto  status.protoset
server/: README.md  __main__.py  app.py  requirements-frozen.txt  requirements.txt
tests/: README.md  echo_any.sh  echo_duration.sh  echo_empty.sh  echo_enum_color.sh  echo_enum_priority.sh  echo_fixed_width.sh  echo_map.sh  echo_nested.sh  echo_varints.sh  (+14 more)
(+7 files in other folders)
